ubuntu-server/iptables/rules.v4
# Generated by iptables-save MAGICUM

*filter
-F
-X

:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT

# Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow pings
-A INPUT -p icmp --icmp-type echo-request -m limit --limit 1/s -j ACCEPT

# SSH

-A INPUT -p tcp -m tcp --dport 19670 -m state --state NEW -m hashlimit --hashlimit 1/sec --hashlimit-burst 3 --hashlimit-mode srcip --hashlimit-name SSH --hashlimit-htable-expire 30000 -j ACCEPT

# HTTP/S

-A INPUT -p tcp -m multiport --dports 80,443 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8888 -j ACCEPT

# SQUID PROXY

-A INPUT -p tcp -m tcp --dport 9080 -j ACCEPT

# FTP passive

-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m state --state NEW,ESTABLISHED --dport 60000:60010 -j ACCEPT

# Drop martians

-A INPUT -i eth0 -s 10.0.0.0/8 -j DROP
-A INPUT -i eth0 -s 172.16.0.0/12 -j DROP
-A INPUT -i eth0 -s 192.168.0.0/16 -j DROP
-A INPUT -i eth0 -s 224.0.0.0/4 -j DROP
-A INPUT -i eth0 -s 240.0.0.0/5 -j DROP
-A INPUT -i eth0 -d 127.0.0.0/8 -j DROP

COMMIT

### Mangle rule to mark HTTP (80) traffic for speed shaping done by "tc" at /etc/rc.local

*mangle

:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-F
-X


-A OUTPUT -o eth0 -p tcp --sport 80 -j MARK --set-mark 5

COMMIT
